--- a/views/rocker_timesheet_views.xml
+++ b/views/rocker_timesheet_views.xml
@@ -51,8 +51,8 @@
             <field name="arch" type="xml">
                 <!--<tree js_class="rocker_tree" string="Timesheets" editable="top" create="true" delete="true" edit="true">-->
                 <tree js_class="task_dashboard_list" string="Timesheets" create="false" delete="false" edit="true" class="task_list" expand="1">
-                    <button name="update_situation" type="object" string="Check In" class="btn btn-success" icon="fa-sign-in" attrs="{'invisible': [('state','not in',['open'])]}"/>
-                    <!--<button name="ccpp.action_check_in" type="action" string="Check In" class="btn btn-danger" icon="fa-sign-in" attrs="{'invisible': [('state','not in',['open'])]}"/>-->
+                    <!-- <button name="update_situation" type="object" string="Check In" class="btn btn-success" icon="fa-sign-in" attrs="{'invisible': [('state','not in',['open'])]}"/> -->
+                    <button name="ccpp.action_check_in" type="action" string="Check In" class="btn btn-success" icon="fa-sign-in" attrs="{'invisible': [('state','not in',['open'])]}"/>
                     <field name="name" string="Task" />
                     <field name="start" required="1" string="From"/>
                     <field name="stop" required="1" string="To"/>
@@ -84,7 +84,7 @@
                     <form>
                         <header>
                             <!--<button name="update_situation" string="Update Situation" type="object" class="btn-primary" states="open"/>-->
-                            <button name="button_done_wizard" string="Check In" type="object" class="btn-success" states="open"/>
+                            <!--<button name="button_done_wizard" string="Check In" type="object" class="btn-success" states="open"/>-->
                             <!--<button name="button_to_open" string="To Open" type="object" class="btn-primary" states="done"/>-->
                             <field name="state" widget="statusbar"/>
                         </header>
@@ -131,6 +131,9 @@
                                     <field name="stop" required="1" string="To" readonly="True"/>
                                     <field name="employee_id" readonly="True" invisible="True"/>
                                     <field name="location" readonly="True"/>
+                                    <field name="is_diff_distance" readonly="True" invisible="True"/>
+                                    <!--<field name="diff_distance" readonly="True" attrs="{'invisible': [('is_diff_distance','=',False)]}" />-->
+                                    <field name="diff_distance" readonly="True" invisible="True" />
                                 </group>
                                 <group>
                                     <field name="project_id" string="CCPP" readonly="True"/>
