--- a/static/src/views/check_in_view.xml
+++ b/static/src/views/check_in_view.xml
@@ -25,51 +25,51 @@
                         <h3 class="" t-esc="widget.date.date_time_now"/>
                     </div>
                     <div t-if="widget.step == '1'" id="first_step" class="container mt-3">
-                        <div style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>Task</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.task"></span>
                             </div>
                         </div>
-                        <div style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>Customer</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.customer"></span>
                             </div>
                         </div>
-                        <div t-if="widget.analytic_line.ccpp_host != false" style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div t-if="widget.analytic_line.ccpp_host != false" style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>Host of CCPP</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.ccpp_host"></span>
                             </div>
                         </div>
-                        <div t-if="widget.analytic_line.ccpp != false" style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div t-if="widget.analytic_line.ccpp != false" style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>CCPP</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.ccpp"></span>
                             </div>
                         </div>
-                        <div t-if="widget.analytic_line.solution != false" style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div t-if="widget.analytic_line.solution != false" style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>Solution</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.solution"></span>
                             </div>
                         </div>
-                        <div t-if="widget.analytic_line.strategy != false" style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div t-if="widget.analytic_line.strategy != false" style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>Strategy</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.strategy"></span>
                             </div>
                         </div>
@@ -90,22 +90,24 @@
                             </div>
                         </div>-->
 
-                        <div style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                        <div style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <div class="col-4" style="white-space: nowrap !important;">
                                 <b>Location</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <a t-attf-href="https://maps.google.com/?q={{widget.latitude}},{{widget.longitude}}" tabindex="-1" target="_blank" class="btn btn-sm btn-light" id="btn-view-on-googlemaps" data-toggle="tooltip" title="View on Google Maps website">
                                     <i class="fa fa-external-link-square"></i>
                                     <span>View on Google Maps</span>
                                 </a>
                             </div>
                         </div>
-                        <div style="text-align: left; font-size: 15px;" class="row">
+                        <div style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <span>Current Situation</span>
                             <input type="text" name="current_situation" t-att-value="current_situation" id="current_situation" class="form-control form-control-sm" autofocus="autofocus"
                             autocapitalize="off" required="required" placeholder="Current Situation"/>      
                         </div>
-                        <div style="text-align: left; font-size: 15px;" class="row">
+                        <div style="text-align: left; font-size: 15px; padding-top: 5px;" class="row">
+                            <span>Next Action</span>
                             <input type="text" name="next_action" t-att-value="next_action" id="next_action" class="form-control form-control-sm" autofocus="autofocus"
                             autocapitalize="off" required="required" placeholder="Next Action"/>      
                         </div>
@@ -113,10 +115,10 @@
 
                     <div t-if="widget.step == '2'" id="first_step" class="container mt-3">
                         <div style="text-align: left; font-size: 15px;" class="row">
-                            <div class="col-3">
+                            <div class="col-4">
                                 <b>Task</b>
                             </div>
-                            <div class="col-9">
+                            <div class="col-8">
                                 <span t-esc="widget.analytic_line.task"></span>
                             </div>
                         </div>
@@ -125,17 +127,13 @@
                     <div t-if="widget.step == '1'" class="flex-grow-1 update_check_in">
                         <button t-attf-class="o_hr_attendance_sign_in_out_icon btn btn-{{ checked_in ? 'warning' : 'success' }} align-self-center px-5 py-3 mt-4 mb-2">
                             <span class="align-middle fs-2 me-3 text-white">Check IN</span>
-                            <i t-attf-class="fa fa-4x fa-sign-in align-middle"/>
+                            <i t-attf-class="fa fa-2x fa-sign-in align-middle"/>
                         </button>
                     </div>
-                    <div t-if="widget.step == '2'" class="flex-grow-1">
-                        <button t-attf-class="align-self-center px-5 py-3 mt-4 mb-2" class="skip_done">
-                            <span class="align-middle fs-2 me-3 text-white">Skip & Done</span>
-                            <i t-attf-class="fa fa-4x fa-sign-in align-middle"/>
-                        </button>
-                        <button t-attf-class="align-self-center px-5 py-3 mt-4 mb-2" class="done">
-                            <span class="align-middle fs-2 me-3 text-white">Done</span>
-                            <i t-attf-class="fa fa-4x fa-sign-in align-middle"/>
+                    <div t-if="widget.step == '1' and widget.analytic_line.strategy != false" class="flex-grow-1 update_check_in done_strategy">
+                        <button t-attf-class="o_hr_attendance_sign_in_out_icon btn btn-{{ checked_in ? 'warning' : 'success' }} align-self-center px-5 py-3 mt-4 mb-2 done_strategy">
+                            <span class="align-middle fs-2 me-3 text-white">Check IN &amp; Done Strategy</span>
+                            <i t-attf-class="fa fa-2x fa-sign-in align-middle"/>
                         </button>
                     </div>
 
@@ -160,7 +158,7 @@
 
                     <div class="flex-grow-1">
                         <h1 class="mt-5" t-esc="widget.employee.name"/>
-                        <h3>Welcome!</h3>
+                        <h3>Check Stock!</h3>
                         <h3 class="" t-esc="widget.date.date_time_now"/>
                     </div>
                     <!-- table order -->
@@ -173,22 +171,23 @@
                                     <tr>
                                         <th class="text-center" style="width: 20%; font-weight: bold;" scope="col">Product</th>
                                         <th class="text-center" style="width: 20%; font-weight: bold;" scope="col">UoM</th>
-                                        <th class="text-center" style="width: 20%; font-weight: bold;" scope="col">ID</th>
+                                        <!--<th class="text-center" style="width: 20%; font-weight: bold;" scope="col">ID</th>-->
                                         <th class="text-center" style="width: 20%; font-weight: bold;" scope="col">Ordered</th>
                                         <th class="text-center" style="width: 20%; font-weight: bold;" scope="col">Remaining</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    <!-- phlid is purchase history line ID-->
                                     <t t-foreach="widget.order_lines" t-as="o" id="t_order_lines">
                                         <tr>
                                             <td><span t-esc="o['product']"/></td>
                                             <td><span t-esc="o['uom']"/></td>
-                                            <td><span t-esc="o['phlid']"/></td>
+                                            <!--<td><span t-esc="o['phlid']"/></td>-->
                                             
-                                            <td><input type="number" name="order+widget.phlid" t-att-data-id="o['phlid']" id="order" class="form-control form-control-sm" autofocus="autofocus"
-                                            autocapitalize="off"/></td>
-                                            <td><input type="number" name="remain+widget.phlid" t-att-value="remain+widget.phlid" id="remain+widget.phlid" class="form-control form-control-sm" autofocus="autofocus"
-                                            autocapitalize="off"/></td>
+                                            <td><input type="number" name="order" t-att-data-id="o['phlid']" id="order" class="input_value order[1] form-control form-control-sm" autofocus="autofocus"
+                                            autocapitalize="off" value="0"/></td>
+                                            <td><input type="number" name="remain" t-att-data-id="o['phlid']"  id="remain" class="input_value remain[2] form-control form-control-sm" autofocus="autofocus"
+                                            autocapitalize="off" value="0"/></td>
                                         </tr>
                                     </t>
                                 </tbody>
@@ -214,9 +213,9 @@
                                         <tr>
                                             <td><span t-esc="b['product']"/></td>
                                             <td><span t-esc="b['uom']"/></td>
-                                            <td><input type="number" name="borrow+widget.phlid" t-att-value="borrow+widget.phlid" id="borrow+widget.phlid" class="form-control form-control-sm" autofocus="autofocus"
+                                            <td><input type="number" name="borrow" t-att-data-id="b['phlid']" id="borrow" class="input_value borrow[3] form-control form-control-sm" autofocus="autofocus"
                                             autocapitalize="off" value="0"/></td>
-                                            <td><input type="number" name="orderborrow+widget.phlid" t-att-value="orderborrow+widget.phlid" id="orderborrow+widget.phlid" class="form-control form-control-sm" autofocus="autofocus"
+                                            <td><input type="number" name="order_borrow" t-att-data-id="b['phlid']" id="order_borrow" class="input_value order_borrow[4] form-control form-control-sm" autofocus="autofocus"
                                             autocapitalize="off" value="0"/></td>
                                         </tr>
                                     </t>
@@ -224,12 +223,15 @@
                             </table>
                         </div>
                     </div>
+                    
                     <div t-if="widget.step == '2'" class="flex-grow-1">
-                        <button type="button" class="btn-secondary skip_done">
-                            <span>Skip && Done</span>
+                        <button type="button" class="btn-secondary px-5 py-3 mt-4 mb-2 skip_done">
+                            <span class="align-middle fs-2 me-3">Skip &amp; Done</span>
+                            <i t-attf-class="fa fa-4x align-middle"/>
                         </button>
-                        <button  type="button" class="btn-success done">
-                            <span>Done</span>
+                        <button  type="button" class="btn-success px-5 py-3 mt-4 mb-2 done">
+                            <span class="align-middle fs-2 me-3">Done</span>
+                            <i t-attf-class="fa fa-4x align-middle"/>
                         </button>
                     </div>
                 </t>
