--- a/views/ccpp_menu_customer.xml
+++ b/views/ccpp_menu_customer.xml
@@ -12,8 +12,8 @@
             id="ccpp_crm_customer_customer_user"
             name="Customer Information"
             parent="menu_main_customer"
-            action="ccpp_customer_information_action"
-            sequence="1"
+            action="ccpp_internal_information_action_user"
+            sequence="3"
             groups="ccpp.group_ccpp_frontoffice_user"
             />
 
@@ -22,7 +22,7 @@
             name="Customer Information"
             parent="menu_main_customer"
             action="ccpp_customer_information_action_manager"
-            sequence="1"
+            sequence="3"
             groups="ccpp.group_ccpp_frontoffice_manager"
             />
 
@@ -31,7 +31,7 @@
             name="Customer Information"
             parent="menu_main_customer"
             action="ccpp_customer_information_action_manager_all_department"
-            sequence="1"
+            sequence="3"
             groups="ccpp.group_ccpp_frontoffice_manager_all_department"
             />
 
@@ -40,7 +40,7 @@
             name="Customer Information"
             parent="menu_main_customer"
             action="ccpp_customer_information_action_ceo"
-            sequence="1"
+            sequence="3"
             groups="ccpp.group_ccpp_ceo"
             />
 
@@ -50,37 +50,42 @@
             id="ccpp_crm_customer_internal_user"
             name="Internal Customer"
             parent="menu_main_customer"
-            action="ccpp_internal_information_action"
-            sequence="2"
+            action="ccpp_internal_information_action_user"
+            sequence="1"
             groups="ccpp.group_ccpp_frontoffice_user,ccpp.group_ccpp_backoffice_user"
             />
+            <!-- action="ccpp_internal_information_action" -->
 
         <menuitem
             id="ccpp_crm_customer_internal_manager"
             name="Internal Customer"
             parent="menu_main_customer"
-            action="ccpp_internal_information_action_manager"
-            sequence="2"
+            action="ccpp_internal_information_action_user"
+            sequence="1"
             groups="ccpp.group_ccpp_frontoffice_manager,ccpp.group_ccpp_backoffice_manager"
             />
+            <!-- action="ccpp_internal_information_action_manager" -->
         
         <menuitem
             id="ccpp_crm_customer_internal_manager_all_department"
             name="Internal Customer"
             parent="menu_main_customer"
-            action="ccpp_internal_information_action_manager_all_department"
-            sequence="2"
+            action="ccpp_internal_information_action_user"
+            sequence="1"
             groups="ccpp.group_ccpp_frontoffice_manager_all_department,ccpp.group_ccpp_backoffice_manager_all_department"
             />
+            <!--action="ccpp_internal_information_action_manager_all_department"-->
+
 
         <menuitem
             id="ccpp_crm_customer_internal_ceo"
             name="Internal Customer"
             parent="menu_main_customer"
-            action="ccpp_internal_information_action_ceo"
-            sequence="2"
+            action="ccpp_internal_information_action_user"
+            sequence="1"
             groups="ccpp.group_ccpp_ceo"
             />
+            <!--action="ccpp_internal_information_action_ceo"-->
         
 
 
@@ -90,36 +95,41 @@
             id="ccpp_crm_customer_external_user"
             name="External Customer"
             parent="menu_main_customer"
-            action="ccpp_external_information_action"
-            sequence="3"
+            action="ccpp_external_information_action_user"
+            sequence="2"
             groups="ccpp.group_ccpp_backoffice_user"
             />
+            <!--groups="ccpp.group_ccpp_backoffice_user"-->
+
 
         <menuitem
             id="ccpp_crm_customer_external_manager"
             name="External Customer"
             parent="menu_main_customer"
-            action="ccpp_external_information_action_manager"
-            sequence="3"
+            action="ccpp_external_information_action_user"
+            sequence="2"
             groups="ccpp.group_ccpp_backoffice_manager"
             />
+            <!--groups="ccpp.group_ccpp_backoffice_manager"-->
 
         <menuitem
             id="ccpp_crm_customer_external_manager_all_department"
             name="External Customer"
             parent="menu_main_customer"
-            action="ccpp_external_information_action_manager_all_department"
-            sequence="3"
+            action="ccpp_external_information_action_user"
+            sequence="2"
             groups="ccpp.group_ccpp_backoffice_manager_all_department"
             />
+            <!--groups="ccpp.group_ccpp_backoffice_manager_all_department"-->
 
         <menuitem
             id="ccpp_crm_customer_external_ceo"
             name="External Customer"
             parent="menu_main_customer"
-            action="ccpp_external_information_action_ceo"
-            sequence="3"
+            action="ccpp_external_information_action_user"
+            sequence="2"
             groups="ccpp.group_ccpp_ceo"
             />
+            <!--action="ccpp_external_information_action_ceo"-->
 
 </odoo>
