--- a/views/ccpp_menu_crm.xml
+++ b/views/ccpp_menu_crm.xml
@@ -37,6 +37,7 @@
 
     <record model="ir.ui.menu" id="crm.crm_menu_root">
         <field name="sequence" eval="2"/>
+        <field name="groups_id" eval="[(6,0,[ref('base.group_system')])]"/>
     </record>
 
     	
