--- a/views/rocker_timesheet_views.xml
+++ b/views/rocker_timesheet_views.xml
@@ -421,7 +421,7 @@
             <field name="model">account.analytic.line</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
-                <calendar js_class="rocker_calendar" string="Tasks"
+                <calendar js_class="ccpp_calendar" string="Tasks"
                           form_view_id="%(ccpp.rocker_timesheet_form)d"
                           date_start="start" date_stop="stop" date_delay="duration"
                           all_day="allday" color="state"
