--- a/views/project_view.xml
+++ b/views/project_view.xml
@@ -765,9 +765,9 @@
                 attrs="{'readonly': [('state', 'in', ['waiting_approve','reject','process','done','cancel','delay'])], 'invisible': [('is_multi_host', '=', True)], 'required': [('is_multi_host', '=', False)]}"
                 /> <!--options="{'no_create':True}"/>-->
                 <field name="is_show_multi_host" invisible="True"/>
-                <field name="is_multi_host" attrs="{'invisible': [('is_show_multi_host','=',False)]}"/>
+                <field name="is_multi_host" attrs="{'readonly': [('state', 'in', ['waiting_approve','reject','process','done','cancel','delay'])], 'invisible': [('is_show_multi_host','=',False)]}"/>
                 <field name="customer_company_id" invisible="True"/>
-                <field name="department_ids" widget="many2many_tags" attrs="{'invisible': [('is_multi_host','=',False)]}" options="{'no_create':True}" domain="[('company_id','=',customer_company_id)]"/>
+                <field name="department_ids" widget="many2many_tags" attrs="{'readonly': [('state', 'in', ['waiting_approve','reject','process','done','cancel','delay'])], 'invisible': [('is_multi_host','=',False)]}" options="{'no_create':True}" domain="[('company_id','=',customer_company_id)]"/>
                 <field name="reason_reject" readonly="True" attrs="{'invisible': [('reason_reject','=',False)]}" style="color:red;"/>
                 <field name="reason_cancel" readonly="True" attrs="{'invisible': [('reason_cancel','=',False)]}" style="color:red;"/>
                 <!--<field name="domain_job_position_ids" invisible="True"/>
